--- a/LovelyPageViewer/Base.lproj/Main.storyboard
+++ b/LovelyPageViewer/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Root View Controller-->
         <scene sceneID="09T-MA-bX9">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="6Wg-n0-PhX" customClass="RootViewController" customModule="LovelyPageViewer" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="6Wg-n0-PhX" customClass="RootViewController" customModule="LovelyPageViewer" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tUt-8m-yZo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1041" y="113"/>
